kube/api-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consilium-api-dep
  namespace: consilium
spec:
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 4
     maxUnavailable: 2
  replicas: 4
  selector:
    matchLabels:
      app: consilium-api
  # pod below
  template:
    metadata:
      labels:
        app: consilium-api
    spec:
      containers:
      - name: consilium-api
        image: mateotomaszeuski/consilium:$BUILD_NUMBER
        # image: mateotomaszeuski/consilium:local_v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
