kube/blackbox-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consilium-prometheus-blackbox-dep
  namespace: $NAMESPACE
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: consilium-prometheus-blackbox-exporter
  template:
    metadata:
      labels:
        app: consilium-prometheus-blackbox-exporter
    spec:
      volumes:
        - name: config
          configMap:
            name: consilium-prometheus-blackbox-config
      containers:
        - name: blackbox-exporter
          image: prom/blackbox-exporter:latest
          args:
            - "--config.file=/etc/blackbox_exporter/config.yml"
          volumeMounts:
            - name: config
              mountPath: /etc/blackbox_exporter
          ports:
            - name: http
              containerPort: 9115
