kube/grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consilium-grafana-dep
  namespace: consilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consilium-grafana
  template:
    metadata:
      labels:
        app: consilium-grafana
    spec:
      volumes:
        - name: consilium-grafana-config
          configMap:
            name: consilium-grafana-config
        - name: consilium-grafana-data
          persistentVolumeClaim:
            claimName: consilium-grafana-pvc
      containers:
      - name: consilium-grafana
        volumeMounts:
          - name: consilium-grafana-data
            mountPath: /var/lib/grafana
          - name: consilium-grafana-config
            mountPath: /etc/grafana/provisioning/datasources/
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
