kube/kube-metrics-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consilium-kube-metrics-dep
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consilium-kube-metrics
  template:
    metadata:
      labels:
        app: consilium-kube-metrics
    spec:
      containers:
      - name: consilium-kube-metrics
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:latest
        ports:
          - name: metrics
            containerPort: 8080
          - name: telemetry
            containerPort: 8081
