kube/loki-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consilium-loki-dep
  namespace: consilium
spec:
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: consilium-loki
  # pod below
  template:
    metadata:
      labels:
        app: consilium-loki
    spec:
      containers:
      - name: consilium-loki
        image: grafana/loki:latest
        ports:
        - containerPort: 3100
