kube/prometheus-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consilium-prometheus-dep
  namespace: consilium
spec:
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: consilium-prometheus
  # pod below
  template:
    metadata:
      labels:
        app: consilium-prometheus
    spec:
      volumes:
        - name: consilium-prometheus-config
          configMap:
            name: consilium-prometheus-config
      containers:
      - name: consilium-prometheus
        image: prom/prometheus
        volumeMounts:
        - name: consilium-prometheus-config
          mountPath: /etc/prometheus/
        ports:
        - containerPort: 9090
