kube/zipkin-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consilium-zipkin-dep
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consilium-zipkin
  template:
    metadata:
      labels:
        app: consilium-zipkin
    spec:
      containers:
      - name: consilium-zipkin
        image: openzipkin/zipkin
        ports:
        - containerPort: 9411
