kube/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-api-svc
  namespace: consilium
spec:
  selector:
    app: consilium-api
  ports:
    - protocol: TCP
      port: 1000
      targetPort: 8080
