kube/blackbox-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-blackbox-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: consilium-prometheus-blackbox-exporter
  ports:
    - name: http
      port: 9115
      targetPort: 9115
      protocol: TCP
