kube/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-postgres-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: consilium-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
