kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-grafana-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: consilium-grafana
  ports:
    - protocol: TCP
      port: 1002
      targetPort: 3000
