kube/kube-metrics-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-kube-metrics-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: consilium-kube-metrics
  ports:
    - name: metrics
      port: 8080
      targetPort: 8080
