kube/loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-loki-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: consilium-loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
