kube/otel-collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-otel-collector-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: consilium-otel-collector
  ports:
  - name: loki-logs
    protocol: TCP
    port: 4317
    targetPort: 4317
  - name: prometheus-metrics
    protocol: TCP
    port: 8889
    targetPort: 8889
