kube/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-prometheus-svc
  namespace: consilium
spec:
  selector:
    app: consilium-prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
