kube/zipkin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consilium-zipkin-svc
  namespace: $NAMESPACE
spec:
  selector:
    app: consilium-zipkin
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
