kube/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consilium-api-ingress
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/proxy-set-headers: "$NAMESPACE/consilium-api-ingress-config"
spec:
  tls:
    - hosts:
        - consilium.duckdns.org
      secretName: consilium-secret-tls
  rules:
  # - host: api.kube.final.codyhowell.dev
  - host: $PULL_REQUEST_NUMBER.consilium.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consilium-api-svc
            port:
              number: 1000
