kube/blackbox-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackbox-ingress
  namespace: $NAMESPACE
spec:
  tls:
    - hosts:
        - consilium.duckdns.org
      secretName: consilium-secret-tls
  rules:
  - host: $PULL_REQUEST_NUMBER-blackbox.consilium.duckdns.org    
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consilium-blackbox-svc
            port:
              number: 9115
