kube/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consilium-grafana-ingress
  namespace: consilium
spec:
  rules:
  # - host: grafana.kube.final.codyhowell.dev
  - host: grafana.consilium.duckdns.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: consilium-grafana-svc
            port: 
              number: 1002
