kube/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consilium-prometheus-ingress
  namespace: $NAMESPACE
spec:
  rules:
  tls:
    - hosts:
        - consilium.duckdns.org
      secretName: consilium-secret-tls
  # - host: prometheus.kube.final.codyhowell.dev
  - host: $PULL_REQUEST_NUMBER-prometheus.consilium.duckdns.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: consilium-prometheus-svc
            port: 
              number: 9090
